# cs599k

./: .gitignore  .gitmodules  README.md  asignment-01.md  gelu-pytorch.ipynb  profile.ncu-rep  silu-pytorch.ncu-rep  silu-pytorch.py  silu-triton.ncu-rep  silu-triton.py  test.ipynb
cuda-pybind/: CMakeLists.txt  README.md  gpu_library.cu  install.bash  test.py
pybind-example/: CMakeLists.txt  README.md  example.cpp
rms_norm/: rms-norm-pytorch.ncu-rep  rms_norm_triton-v2-looping-col-wise.ncu-rep  rms_norm_triton.py  rms_norm_triton_looping_over_cols.py
rms_norm/matrix/: main.cu  rms_norm_matrix.cu  rms_norm_matrix.h
rms_norm/matrix/ncu-reports/: 2025-04-21_v1.ncu-rep  2025-04-21_v2-float4.ncu-rep
rms_norm/triton/: rms_norm_pytorch.py  rms_norm_triton.ncu-rep  rms_norm_triton_looping.ncu-rep  rms_norm_triton_looping_over_cols.py
rms_norm/vector/: main.cu  rms_norm_vector.cu  rms_norm_vector.h
rms_norm/vector/ncu-reports/: 2025-04-21-v1.ncu-rep
silu/: silu-2025-04-18-v1.ncu-rep  silu-2025-04-18-v2.ncu-rep  silu-2025-04-18-v4-naive.ncu-rep  silu-2025-04-18-v5-naive.ncu-rep  silu-2025-04-18-v7.ncu-rep  silu-2025-04-19-v2.ncu-rep  silu-2025-04-19-v3.ncu-rep  silu-pytorch-ncu-report.txt  silu-pytorch.py  silu-triton-v2.ncu-rep  silu-triton.ncu-rep  silu-triton.py
silu/CUDA/: .gitignore  CMakeLists.txt  README.md  bindings.cpp  import_silu.py  main.cu  silu.cu  silu.h  test  test_tiled.py  testing.py
silu/CUDA-round 1/: README.md  pyproject.toml
silu/CUDA/ncu-reports/: 2025-04-21-77_06-MT.ncu-rep  2025-04-21-vector-based.ncu-rep
silu/cuda-round-2/: setup.py  testing.py
silu/cuda-round-2/cuda_extension.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
silu/cuda-round-2/silu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
silu/cuda-round-2/silu_cuda/: bindings.cpp  silu.cu
silu/triton/: silu-2025-04-18-v3.ncu-rep  silu-2025-04-18-v6.ncu-rep  silu-2025-04-18-v8.ncu-rep  silu-2025-04-18-v9.ncu-rep  silu-2025-04-19-v1.ncu-rep
