[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "silu"
version = "0.1.0"
description = "CUDA implementation of SiLU activation function"
authors = [
    {name = "Author", email = "author@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"

[tool.scikit-build]
wheel.packages = []
cmake.build-type = "Release"